[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/Title.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Settings.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.188235, 0.188235, 0.188235, 1 )
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.188235, 0.188235, 0.188235, 1 )
border_width_top = 2
border_color = Color( 0, 0, 0, 1 )

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 0.107
margin_bottom = -0.200005
custom_colors/default_color = Color( 0.913725, 0.419608, 0.419608, 1 )
custom_fonts/mono_font = ExtResource( 1 )
custom_fonts/bold_italics_font = ExtResource( 1 )
custom_fonts/italics_font = ExtResource( 1 )
custom_fonts/bold_font = ExtResource( 1 )
custom_fonts/normal_font = ExtResource( 1 )
custom_styles/normal = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Settings[/center]"
text = "Settings"
scroll_active = false
__meta__ = {
"_edit_lock_": true
}

[node name="CloseButton" parent="." instance=ExtResource( 2 )]
anchor_left = 0.766
anchor_top = 0.147
anchor_right = 0.977
anchor_bottom = 0.213
margin_left = -0.384033
margin_top = -0.199997
margin_right = -0.448059
margin_bottom = 0.199989
text = "Save and Close"

[node name="SettingsContainer" type="ScrollContainer" parent="."]
anchor_left = 0.062
anchor_top = 0.257
anchor_right = 0.937
anchor_bottom = 0.96
margin_left = 0.511997
margin_top = -2.2
margin_right = 0.511963
custom_styles/bg = SubResource( 2 )
scroll_horizontal_enabled = false

[node name="SettingsBox" type="VBoxContainer" parent="SettingsContainer"]
margin_top = 2.0
margin_right = 919.0
margin_bottom = 132.0
rect_min_size = Vector2( 896, 0 )

[node name="AudioLabel" type="Label" parent="SettingsContainer/SettingsBox"]
margin_right = 919.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "Audio"
align = 1
valign = 2

[node name="Seperator" type="HSeparator" parent="SettingsContainer/SettingsBox"]
margin_top = 24.0
margin_right = 896.0
margin_bottom = 28.0
rect_min_size = Vector2( 896, 0 )
size_flags_horizontal = 2

[node name="AudioMasterVolume" type="HBoxContainer" parent="SettingsContainer/SettingsBox"]
margin_top = 32.0
margin_right = 919.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="SettingsContainer/SettingsBox/AudioMasterVolume"]
margin_right = 300.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 30 )
text = "Master Volume"
align = 1
valign = 1

[node name="Mute" type="CheckBox" parent="SettingsContainer/SettingsBox/AudioMasterVolume"]
margin_left = 304.0
margin_right = 365.0
margin_bottom = 30.0
text = "Mute"
align = 1

[node name="Input" type="HSlider" parent="SettingsContainer/SettingsBox/AudioMasterVolume"]
margin_left = 369.0
margin_right = 919.0
margin_bottom = 30.0
rect_min_size = Vector2( 550, 30 )
min_value = -80.0
max_value = 5.0
step = 5.0
tick_count = 18
ticks_on_borders = true

[node name="AudioUiVolume" type="HBoxContainer" parent="SettingsContainer/SettingsBox"]
margin_top = 66.0
margin_right = 919.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="SettingsContainer/SettingsBox/AudioUiVolume"]
margin_right = 300.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 30 )
text = "UI Volume"
align = 1
valign = 1

[node name="Mute" type="CheckBox" parent="SettingsContainer/SettingsBox/AudioUiVolume"]
margin_left = 304.0
margin_right = 365.0
margin_bottom = 30.0
text = "Mute"
align = 1

[node name="Input" type="HSlider" parent="SettingsContainer/SettingsBox/AudioUiVolume"]
margin_left = 369.0
margin_right = 919.0
margin_bottom = 30.0
rect_min_size = Vector2( 550, 30 )
min_value = -80.0
max_value = 5.0
step = 5.0
tick_count = 18
ticks_on_borders = true

[node name="AudioMusicVolume" type="HBoxContainer" parent="SettingsContainer/SettingsBox"]
margin_top = 100.0
margin_right = 919.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="SettingsContainer/SettingsBox/AudioMusicVolume"]
margin_right = 300.0
margin_bottom = 30.0
rect_min_size = Vector2( 300, 30 )
text = "UI Volume"
align = 1
valign = 1

[node name="Mute" type="CheckBox" parent="SettingsContainer/SettingsBox/AudioMusicVolume"]
margin_left = 304.0
margin_right = 365.0
margin_bottom = 30.0
disabled = true
text = "Mute"
align = 1

[node name="Input" type="HSlider" parent="SettingsContainer/SettingsBox/AudioMusicVolume"]
margin_left = 369.0
margin_right = 919.0
margin_bottom = 30.0
rect_min_size = Vector2( 550, 30 )
min_value = -80.0
max_value = 5.0
step = 5.0
tick_count = 18
ticks_on_borders = true

[connection signal="button_up" from="CloseButton" to="." method="_on_CloseButton_button_up"]
[connection signal="toggled" from="SettingsContainer/SettingsBox/AudioMasterVolume/Mute" to="." method="_on_Audio_Master_Mute_toggled"]
[connection signal="drag_ended" from="SettingsContainer/SettingsBox/AudioMasterVolume/Input" to="." method="_on_Audio_Master_Volume_Input_drag_ended"]
[connection signal="toggled" from="SettingsContainer/SettingsBox/AudioUiVolume/Mute" to="." method="_on_Audio_UI_Mute_toggled"]
[connection signal="drag_ended" from="SettingsContainer/SettingsBox/AudioUiVolume/Input" to="." method="_on_Audio_UI_Volume_Input_drag_ended"]
[connection signal="toggled" from="SettingsContainer/SettingsBox/AudioMusicVolume/Mute" to="." method="_on_Audio_Music_Mute_toggled"]
[connection signal="drag_ended" from="SettingsContainer/SettingsBox/AudioMusicVolume/Input" to="." method="_on_Audio_Music_Volume_Input_drag_ended"]
